# AI-Assisted-Cancer-Detection-and-Explanation-System

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: app.yaml  continual.yaml  models.yaml  training.yaml
configs/prompts/: report_template.md  safety_checks.md
docs/: ARCHITECTURE.md  BLOOD_CANCER_TYPES.md  MULTI_MODEL_PIPELINES.md  ROADMAP.md  SECURITY_SAFETY.md  TECHNICAL_DOCUMENTATION.md  datasets.md
infra/: Dockerfile  docker-compose.yml
knowledge_base/: clinical_disclaimer.md  dataset_cnmc_2019.md  model_explainability.md
scripts/: download_cnmc_hf.py  download_kaggle.py  eda_dataset.py  make_family_datasets.py  prepare_dataset.py  register_checkpoint.py  train_policies.py
services/api/: db.py  feedback_store.py  main.py
src/bloodcancer/: __init__.py  api_client.py  config.py  infer.py  llm.py  registry.py  reporting.py  train.py  train_incremental.py
src/bloodcancer/agents/: agents.py  graph.py  nodes.py  supervisor.py  tools.py
src/bloodcancer/agents/nodes/: __init__.py  explain.py  inference.py  preprocess.py  rag.py  (+3 more)
src/bloodcancer/common/: metrics.py
src/bloodcancer/data/: datasets.py
src/bloodcancer/explain/: gradcam.py
src/bloodcancer/models/: modeling.py
src/bloodcancer/rag/: tfidf_rag.py
src/bloodcancer/train/: __main__.py  trainer.py
src/bloodcancer/vision/: preprocess.py
src/bloodcancer_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_hierarchical_policy.py
tests/unit/: test_agents_specs.py  test_import.py  test_routing_and_subtype.py  test_supervisor.py
ui/: streamlit_app.py
